@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+Interface:
+* FeatureStructure method merge_hash() renamed to merge_hash_hard() and added new method merge_hash_soft().
+* Similarly, Atom method decode_and_merge() split to decode_and_merge_hard() and decode_and_merge_soft().
+
 Features:
 * New value of feature 'advtype': 'sta' (adverb of state, e.g. Czech "horko", "zima", "volno", "nanic").
 
